// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`align.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-start t-space-horizontal"
        style="gap: 16px; padding: 12px;"
      >
        <div
          class="t-space-item"
        >
          <div>
            start
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              Button
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <div
            style="height: 60px; width: 60px;"
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-center t-space-horizontal"
        style="gap: 16px; padding: 12px;"
      >
        <div
          class="t-space-item"
        >
          <div>
            center
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              Button
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <div
            style="height: 60px; width: 60px;"
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-end t-space-horizontal"
        style="gap: 16px; padding: 12px;"
      >
        <div
          class="t-space-item"
        >
          <div>
            end
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              Button
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <div
            style="height: 60px; width: 60px;"
          />
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-align-baseline t-space-horizontal"
        style="gap: 16px; padding: 12px;"
      >
        <div
          class="t-space-item"
        >
          <div>
            baseline
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              Button
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <div
            style="height: 60px; width: 60px;"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`break-line.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px; flex-wrap: wrap;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`separator.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-align-center t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Text
        </span>
      </button>
    </div>
    <div
      class="t-space-item-separator"
    >
      <div
        class="t-divider t-divider--vertical"
      />
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Text
        </span>
      </button>
    </div>
    <div
      class="t-space-item-separator"
    >
      <div
        class="t-divider t-divider--vertical"
      />
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-default t-button--variant-text"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Text
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`size.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-slider__container"
  >
    <div
      class="t-slider"
    >
      <div
        class="t-slider__rail"
      >
        <div
          class="t-slider__track"
          style="left: 0%; width: 8%;"
        />
        <div
          class="t-popup__reference"
        >
          <div
            class="t-slider__button-wrapper"
            style="left: 8%;"
          >
            <div
              class="t-slider__button"
            />
          </div>
        </div>
        <div />
        <div
          class="t-slider__mark"
        />
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-space t-space-horizontal"
    style="gap: 8px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          Button
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`vertical.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-card t-card--bordered t-card--shadow-hover"
      >
        <div
          class="t-card__header"
        />
        <div
          class="t-card__body"
        >
          仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-card t-card--bordered t-card--shadow-hover"
      >
        <div
          class="t-card__header"
        />
        <div
          class="t-card__body"
        >
          仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-card t-card--bordered t-card--shadow-hover"
      >
        <div
          class="t-card__header"
        />
        <div
          class="t-card__body"
        >
          仅有内容区域的卡片形式。卡片内容区域可以是文字、图片、表单、表格等形式信息内容。可使用大中小不同的卡片尺寸，按业务需求进行呈现。
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
